[package]
name = "mogus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.8.1" }
bevy-inspector-egui = "0.13.0"
bevy_asset_loader = "0.12.1"
serde = "1.0.147"
serde_json = "1.0.87"
log = "0.4.17"
bevy_ecs_ldtk = "0.4.0"
leafwing-input-manager = "0.6.1"
bevy_rapier2d = { version = "0.17.0", features = [ "simd-stable", "debug-render" ] }
